Swagger/Open api clean ups
