# FSA.IncidentsManagement/Controllers/Links.cs
@@ -1,7 +1,6 @@
 ﻿using FSA.IncidentsManagement.Misc;
 using FSA.IncidentsManagement.Models;
 using FSA.IncidentsManagement.Root.Domain;
-using FSA.SIMSManagerDb.Contracts;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
@@ -14,6 +13,7 @@ namespace FSA.IncidentsManagement.Controllers
     [Route("api/[controller]")]
     [Produces("application/json")]
     [ApiController]
+    [ApiConventionType(typeof(DefaultApiConventions))]
     [Authorize]
     public class LinksController : ControllerBase
     {
@@ -29,6 +29,7 @@ namespace FSA.IncidentsManagement.Controllers
         [HttpGet("{incidentSignal}/{id}")]
         [SwaggerOperation(Summary = "Get All links for incident/signal")]
         [ProducesResponseType(200)]
+        [ProducesResponseType(typeof(string), 403)]
         [ProducesResponseType(500)]
         [Produces("application/json")]
         public async Task<IActionResult> GetLinks([FromRoute] string incidentSignal, [FromRoute] int id)
@@ -37,7 +38,7 @@ namespace FSA.IncidentsManagement.Controllers
             {
                 IncidentOrSignal.Incidents => new OkObjectResult(await simsApp.Incidents.DashboardLinks(id)),
                 IncidentOrSignal.Signals => new OkObjectResult(await simsApp.Signals.DashboardLinks(id)),
-                _ => new BadRequestObjectResult("Route not found")
+                _ => BadRequest("Route not found")
             };
         }
 
@@ -45,6 +46,7 @@ namespace FSA.IncidentsManagement.Controllers
         [SwaggerOperation(Summary = "Remove links for incident/signal")]
         [ProducesResponseType(200)]
         [ProducesResponseType(500)]
+        [ProducesResponseType(typeof(string), 403)]
         [Produces("application/json")]
         public async Task<IActionResult> RemoveLink([FromRoute] string incidentSignal, [FromBody] UnlinkModel unlink)
         {
@@ -52,13 +54,14 @@ namespace FSA.IncidentsManagement.Controllers
             {
                 IncidentOrSignal.Incidents => new OkObjectResult(await simsApp.Incidents.Links.Remove(unlink.FromId, unlink.ToId)),
                 IncidentOrSignal.Signals => new OkObjectResult(await simsApp.Signals.Links.Remove(unlink.FromId, unlink.ToId)),
-                _ => new BadRequestObjectResult("Route not found")
+                _ => BadRequest("Route not found")
             };
         }
 
         [HttpPost("{incidentSignal}")]
         [SwaggerOperation(Summary = "Link two or more incidents")]
         [ProducesResponseType(200)]
+        [ProducesResponseType(typeof(string), 403)]
         [ProducesResponseType(500)]
         public async Task<IActionResult> AddLink([FromRoute] string incidentSignal, [FromBody] LinkModel links)
         {
@@ -66,7 +69,7 @@ namespace FSA.IncidentsManagement.Controllers
             {
                 IncidentOrSignal.Incidents => new OkObjectResult(await simsApp.Incidents.Links.Add(links.FromId, links.ToIds, links.Comment)),
                 IncidentOrSignal.Signals => new OkObjectResult(await simsApp.Signals.Links.Add(links.FromId, links.ToIds, links.Comment)),
-                _ => new BadRequestObjectResult("Route not found")
+                _ => BadRequest("Route not found")
             };
         }
     }
